correct css (min instead of max in media query lead to wrong spacing)

--- a/css/they.css
+++ b/css/they.css
@@ -461,7 +461,7 @@ table.content-holder:nth-child(4) .genealogie td.c-cell {
 }
 
 
-@media screen and (min-width: 767px) {
+@media screen and (max-width: 767px) {
     .goto-next {
         height: 10%;
     }
